--- a/.config/ghostty/config
+++ b/.config/ghostty/config
@@ -1,4 +1,5 @@
-background-opacity = 0.75
+background-opacity = 0.65
+background-blur-radius = 20
 theme = "TokyoNight Storm"
 
 quick-terminal-position = "top"
