--- a/.config/git/config
+++ b/.config/git/config
@@ -2,8 +2,9 @@
   defaultBranch = main
 
 [alias]
-  co = checkout
-  ci = commit
+  c = checkout
+  cb = checkout -b
+  cm = commit
   st = status
   br = branch
   pl = pull
